--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
 </head>
 <body>
     <div class="container">
-        <h1>Flight Trajectory Visualizations</h1>
+        <h1>Sector Design Visualization H05</h1>
         <div class="viz-grid">
             <div class="viz-card">
-                <h2>Visualization 05</h2>
+                <h2>Traffic Scenario 05</h2>
                 <div class="description">
-                    3D visualization of flight trajectories and airspace sectors
+                    3D airsapce sector design with main traffic flow of H05.
                 </div>
                 <a href="05.html">View Visualization</a>
             </div>
             
             <div class="viz-card">
-                <h2>Visualization 06</h2>
+                <h2>Sector Design Visualization H06</h2>
                 <div class="description">
-                    Enhanced view with additional trajectory data
+                    3D airsapce sector design with main traffic flow of H06.
                 </div>
                 <a href="06.html">View Visualization</a>
             </div>
             
             <div class="viz-card">
-                <h2>Visualization 07</h2>
+                <h2>Sector Design Visualization H07</h2>
                 <div class="description">
-                    Comprehensive airspace analysis visualization
+                    3D airsapce sector design with main traffic flow of H07.
                 </div>
                 <a href="07.html">View Visualization</a>
             </div>
