--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sector Design Visualization H05</h1>
+        <h1>Sector Design Visualization</h1>
         <div class="viz-grid">
             <div class="viz-card">
-                <h2>Traffic Scenario 05</h2>
+                <h2>Traffic Scenario H05</h2>
                 <div class="description">
                     3D airsapce sector design with main traffic flow of H05.
                 </div>
@@ -75,15 +75,14 @@
             </div>
             
             <div class="viz-card">
-                <h2>Sector Design Visualization H06</h2>
+                <h2>Traffic Scenario H06</h2>
                 <div class="description">
                     3D airsapce sector design with main traffic flow of H06.
                 </div>
                 <a href="06.html">View Visualization</a>
             </div>
-            
             <div class="viz-card">
-                <h2>Sector Design Visualization H07</h2>
+                <h2>Traffic Scenario H07</h2>
                 <div class="description">
                     3D airsapce sector design with main traffic flow of H07.
                 </div>
